svg circles rendering but not perfectly

--- a/app/views/main/main.html
+++ b/app/views/main/main.html
@@ -10,8 +10,10 @@
                 <span class="text">{{letter}}</span>
             </div>
             <div class="cell" id="{{letter}}{{number}}" ng-repeat="number in numbers">
-                <!--        <div drawCirle></div>-->
-                <span class="text">{{letter}}{{number}}</span>
+                <div class="well">
+                    <div circle></div>
+                </div>
+                <!--                <span class="text">{{letter}}{{number}}</span>-->
             </div>
         </div>
     </div>
