--- a/assets/scss/_plate.scss
+++ b/assets/scss/_plate.scss
@@ -19,8 +19,8 @@
     }
     .text {
         position: absolute;
-        left: 30%;
-        top: 50%;
+        left: 20px;
+        top: 30px;
         font-size: 32px;
         font-weight: bold;
     }
