--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,3 @@
-.numberRow div{display:inline-block;width:100px}.numberRow .columnHeader{text-align:center;font-size:32px;font-weight:bold}.letterRow div{display:inline-block;width:100px;height:100px;position:relative}.letterRow .text{position:absolute;left:20px;top:30px;font-size:32px;font-weight:bold}
+.numberRow div{display:inline-block;width:100px}.numberRow .columnHeader{text-align:center;font-size:32px;font-weight:bold}.letterRow .rowHeader,.letterRow .cell{display:inline-block;width:100px;height:100px;position:relative}.letterRow .text{position:absolute;left:30px;top:25px;font-size:32px;font-weight:bold}.letterRow .customWell{margin:auto;width:90px;height:90px;position:relative;border-radius:50%;border:2px solid black}
 
 /*# sourceMappingURL=style.css.map */
