--- a/app/views/pages/main.html
+++ b/app/views/pages/main.html
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-xs-12">
             <div class="alert bg-danger" ng-if="main.error">
